--- a/SampleCode/LabelingUX/Client/package.json
+++ b/SampleCode/LabelingUX/Client/package.json
@@ -14,7 +14,7 @@
         "jsonschema": "^1.4.1",
         "jszip": "^3.10.0",
         "ol": "6.14.1",
-        "pdfjs-dist": "^2.14.305",
+        "pdfjs-dist": "^2.14.305",        
         "qs": "^6.11.0",
         "react": "^17.0.2",
         "react-beautiful-dnd": "^13.1.0",
@@ -71,10 +71,13 @@
         "uuid": "^8.3.2"
     },
     "resolutions": {
-        "nth-check": "2.0.1",
-        "css-select": "4.1.3",
-        "svgo": "2.3.0"
+        "css-select": "^4.1.3",
+        "svgo": "^2.3.0"
     },
+    "overrides": {
+        "nth-check": "^2.1.1",
+        "postcss": "^8.4.31"
+      },
     "scripts": {
         "preinstall": "npx npm-force-resolutions",
         "start": "react-scripts start",
